--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.1.1",
     "@supabase/supabase-js": "^2.39.3",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
