--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "lucide-react": "^0.451.0",
     "next": "14.2.6",
     "next-themes": "^0.3.0",
+    "openai": "^4.0.0",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
